# network-configurator

./: .gitignore  README.md  network-configuration.default.conf
conf/: layer.conf  network-configuration.default.conf
recipe-network-configurator/: network-configurator.bb
recipes-network/network-configurator/: network-configurator.bb
recipes-network/network-configurator/files/: network-configurator.service
recipes-network/python3-ifconfig-parser/: python3-ifconfig-parser_0.0.5.bb
recipes-network/python3-nmcli/: python3-nmcli_1.5.0.bb
scripts/: install.sh  install_python_scripts.sh
src/: host_adapter.py  inteface_manager.py  network_conf_server.py  nmcli_adapter.py
src/interface_manager/: ap_interface.py  ethernet_interface.py  inteface_manager.py  network_interface_base.py  wifi_interface.py
src/interface_manager/adapters/: host_adapter.py  nmcli_adapter.py
src/static/: index.html  main.css  scripts.js
src_go/: network_conf_server.go
src_python/: network_conf_server.py  requirements.txt
src_python/interface_manager/: inteface_manager.py  network_interface_base.py  wifi_interface.py
src_python/interface_manager/adapters/: nmcli_adapter.py
src_rust/: Cargo.toml  network-configuration.default.conf  network_conf_server.rs
src_rust/interface_manager/: interface_manager.rs  mod.rs
static/: index.html  main.css  scripts.js
