[package]
name = "network_configurator"
description = "Network Configuration Service"
version = "0.1.0"
edition = "2024"
authors = [ "Stanislav Karpikov <stankarpikov@gmail.com>" ]

[dependencies]
actix-web = "4.10.2"
actix-files = "0.6.6"
log = "0.4.27"
config = "0.15.11"
clap = {version = "4.5.32", features = ["cargo"] }
tokio = "1.44.1"
serde = { version = "1.0.219", features = ["derive"] }
serde_json = "1.0.140"
serde_merge = "0.1.3"

[[bin]]
name = "network_conf_server"
path = "network_conf_server.rs"